--- a/Whats_New/app/views/chats/index.html.erb
+++ b/Whats_New/app/views/chats/index.html.erb
@@ -1,5 +1,7 @@
-<h1>Chats</h1>
-
+<div class="d-flex justify-content-between align-items-center mb-3">
+  <h1>Chats</h1>
+  <%= link_to 'New Chat', new_chat_path, class: 'btn btn-success' %>
+</div>
 <table class="table">
   <thead>
     <tr>
