--- a/Whats_New/app/views/users/index.html.erb
+++ b/Whats_New/app/views/users/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Users</h1>
+<div class="d-flex justify-content-between align-items-center mb-3">
+  <h1>Users</h1>
+  <%= link_to 'New User', new_user_path, class: 'btn btn-success' %>
+</div>
 
 <table class="table">
   <thead>
