--- a/Whats_New/app/views/chats/edit.html.erb
+++ b/Whats_New/app/views/chats/edit.html.erb
@@ -1,7 +1,8 @@
 <div class="container mt-5">
-  <h1 class="mb-4">New Chat</h1>
+  <h1 class="mb-4">Edit Chat</h1>
   <%= render 'form', chat: @chat %>
   <div class="mt-3">
+    <%= link_to 'Show', @chat, class: 'btn btn-info mr-2' %>
     <%= link_to 'Back to Chats', chats_path, class: 'btn btn-secondary' %>
   </div>
 </div>
