--- a/Whats_New/app/views/messages/edit.html.erb
+++ b/Whats_New/app/views/messages/edit.html.erb
@@ -1,7 +1,8 @@
 <div class="container mt-5">
-  <h1 class="mb-4">New Message</h1>
+  <h1 class="mb-4">Edit Message</h1>
   <%= render 'form', message: @message %>
   <div class="mt-3">
+    <%= link_to 'Show', @message, class: 'btn btn-info mr-2' %>
     <%= link_to 'Back to Messages', messages_path, class: 'btn btn-secondary' %>
   </div>
 </div>
