--- a/Whats_New/app/views/users/edit.html.erb
+++ b/Whats_New/app/views/users/edit.html.erb
@@ -1,7 +1,8 @@
 <div class="container mt-5">
-  <h1 class="mb-4">New User</h1>
+  <h1 class="mb-4">Edit User</h1>
   <%= render 'form', user: @user %>
   <div class="mt-3">
+    <%= link_to 'Show', @user, class: 'btn btn-info mr-2' %>
     <%= link_to 'Back to Users', users_path, class: 'btn btn-secondary' %>
   </div>
 </div>
