--- a/Whats_New/app/views/layouts/_navigation.html.erb
+++ b/Whats_New/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <%= link_to 'Users', users_path, class: 'nav-link' %>
         </li>
@@ -15,6 +15,25 @@
         <li class="nav-item">
           <%= link_to 'Messages', messages_path, class: 'nav-link' %>
         </li>
+      </ul>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <span class="navbar-text me-2">Signed in as <%= current_user.email %></span>
+          </li>
+          <li class="nav-item">
+            <%= button_to 'Sign out', destroy_user_session_path, method: :delete, 
+                class: 'btn btn-link nav-link', form: { class: 'd-inline' }, 
+                data: { turbo: true } %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
