--- a/Whats_New/app/views/messages/show.html.erb
+++ b/Whats_New/app/views/messages/show.html.erb
@@ -5,5 +5,10 @@
 <p><strong>Content:</strong> <%= @message.body %></p>
 <p><strong>Sent At:</strong> <%= @message.created_at %></p>
 
-<%= link_to 'Edit', edit_message_path(@message), class: 'btn btn-primary' %>
+<% if can? :edit, @message %>
+  <%= link_to 'Edit', edit_message_path(@message), class: 'btn btn-primary' %>
+<% end %>
+<% if can? :destroy, @message %>
+  <%= link_to 'Delete', @message, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+<% end %>
 <%= link_to 'Back', messages_path, class: 'btn btn-secondary' %>
