--- a/Whats_New/app/views/users/index.html.erb
+++ b/Whats_New/app/views/users/index.html.erb
@@ -20,7 +20,9 @@
         <td><%= user.sent_messages.count %></td> 
         <td>
           <%= link_to 'Show', user, class: 'btn btn-sm btn-info' %>
-          <%= link_to 'Edit', edit_user_path(user), class: 'btn btn-sm btn-warning' %>
+          <% if can? :edit, user %>
+            <%= link_to 'Edit', edit_user_path(user), class: 'btn btn-sm btn-warning' %>
+          <% end %>
         </td>
       </tr>
     <% end %>
