--- a/Whats_New/app/views/users/show.html.erb
+++ b/Whats_New/app/views/users/show.html.erb
@@ -20,5 +20,10 @@
   <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary' %>
+<% if can? :edit, @user %>
+  <%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary' %>
+<% end %>
+<% if can? :destroy, @user %>
+  <%= link_to 'Delete', @user, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+<% end %>
 <%= link_to 'Back', users_path, class: 'btn btn-secondary' %>
