--- a/Whats_New/app/views/layouts/_navigation.html.erb
+++ b/Whats_New/app/views/layouts/_navigation.html.erb
@@ -1,37 +1,46 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Whats New</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <%= link_to 'WhatsNew', root_path, class: 'navbar-brand' %>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to 'Users', users_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Chats', chats_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Messages', messages_path, class: 'nav-link' %>
-        </li>
-      </ul>
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+    <div class="collapse navbar-collapse" id="navbarContent">
+      <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <span class="navbar-text me-2">Signed in as <%= current_user.email %></span>
+            <%= link_to 'Messages', messages_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= button_to 'Sign out', destroy_user_session_path, method: :delete, 
-                class: 'btn btn-link nav-link', form: { class: 'd-inline' }, 
-                data: { turbo: true } %>
+            <%= link_to 'Chats', chats_path, class: 'nav-link' %>
+          </li>
+          <% if can? :manage, User %>
+            <li class="nav-item">
+              <%= link_to 'Users', users_path, class: 'nav-link' %>
+            </li>
+          <% end %>
+        <% end %>
+      </ul>
+
+      <ul class="navbar-nav">
+        <% if user_signed_in? %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
+              <%= current_user.email %>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><%= link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item' %></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><%= link_to 'Sign Out', destroy_user_session_path, data: { turbo_method: :delete }, class: 'dropdown-item' %></li>
+            </ul>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
+            <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
+            <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
           </li>
         <% end %>
       </ul>
