--- a/Whats_New/app/views/messages/index.html.erb
+++ b/Whats_New/app/views/messages/index.html.erb
@@ -1,26 +1,36 @@
-<div class="d-flex justify-content-between align-items-center mb-3">
-  <h1>Messages</h1>
-  <%= link_to 'New Message', new_message_path, class: 'btn btn-success' %>
-</div>
-<table class="table">
-  <thead>
-    <tr>
-      <th>Chat ID</th>
-      <th>User ID</th>
-      <th>Body</th>
-      <th>Created At</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @messages.each do |message| %>
+<div class="container">
+  <h1 class="my-4">Messages</h1>
+  
+  <% if can? :create, Message %>
+    <%= link_to 'New Message', new_message_path, class: 'btn btn-primary mb-3' %>
+  <% end %>
+
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= message.chat_id %></td>
-        <td><%= message.user_id %></td>
-        <td><%= message.body %></td>
-        <td><%= message.created_at %></td>
-        <td><%= link_to 'Show', message_path(message) %></td>
+        <th>Content</th>
+        <th>Chat</th>
+        <th>Author</th>
+        <th>Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @messages.each do |message| %>
+        <tr>
+          <td><%= message.body %></td>
+          <td><%= message.chat.id %></td>
+          <td><%= message.user.email %></td>
+          <td>
+            <%= link_to 'Show', message, class: 'btn btn-sm btn-info' %>
+            <% if can? :update, message %>
+              <%= link_to 'Edit', edit_message_path(message), class: 'btn btn-sm btn-warning' %>
+            <% end %>
+            <% if can? :destroy, message %>
+              <%= link_to 'Delete', message, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
