--- a/Whats_New/app/views/users/index.html.erb
+++ b/Whats_New/app/views/users/index.html.erb
@@ -1,30 +1,27 @@
-<div class="d-flex justify-content-between align-items-center mb-3">
-  <h1>Users</h1>
-  <%= link_to 'New User', new_user_path, class: 'btn btn-success' %>
-</div>
+<div class="container">
+  <h1 class="my-4">Users</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Email</th>
-      <th>Name</th>
-      <th>Messages Sent</th> 
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= user.email %></td>
-        <td><%= user.first_name %> <%= user.last_name %></td>
-        <td><%= user.sent_messages.count %></td> 
-        <td>
-          <%= link_to 'Show', user, class: 'btn btn-sm btn-info' %>
-          <% if can? :edit, user %>
-            <%= link_to 'Edit', edit_user_path(user), class: 'btn btn-sm btn-warning' %>
-          <% end %>
-        </td>
+        <th>Email</th>
+        <th>Name</th>
+        <th>Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.email %></td>
+          <td><%= user.first_name %> <%= user.last_name %></td>
+          <td>
+            <%= link_to 'Show', user, class: 'btn btn-sm btn-info' %>
+            <% if can? :update, user %>
+              <%= link_to 'Edit', edit_user_path(user), class: 'btn btn-sm btn-warning' %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
