--- a/Whats_New/app/views/layouts/_navigation.html.erb
+++ b/Whats_New/app/views/layouts/_navigation.html.erb
@@ -32,7 +32,14 @@
             <ul class="dropdown-menu dropdown-menu-end">
               <li><%= link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item' %></li>
               <li><hr class="dropdown-divider"></li>
-              <li><%= link_to 'Sign Out', destroy_user_session_path, data: { turbo_method: :delete }, class: 'dropdown-item' %></li>
+              <li>
+                <%= button_to 'Sign Out', 
+                    destroy_user_session_path, 
+                    method: :delete,
+                    class: 'dropdown-item',
+                    form: { data: { turbo: true } }
+                %>
+              </li>
             </ul>
           </li>
         <% else %>
