--- a/Whats_New/app/views/messages/_form.html.erb
+++ b/Whats_New/app/views/messages/_form.html.erb
@@ -1,18 +1,13 @@
-<%= form_with(model: message) do |form| %>
-  <% if message.errors.any? %>
-    <div class="alert alert-danger">
-      <h4><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h4>
-      <ul>
-        <% message.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+<%= form_with(model: [chat, message]) do |f| %>
+  <div class="input-group mb-3">
+    <%= f.text_area :body, class: 'form-control', placeholder: 'Type your message...', rows: 1 %>
+    <%= f.submit 'Send', class: 'btn btn-primary' %>
+  </div>
   <% end %>
 
   <div class="mb-3">
-    <%= form.label :chat_id, class: 'form-label' %>
-    <%= form.select :chat_id, 
+    <%= f.label :chat_id, class: 'form-label' %>
+    <%= f.select :chat_id, 
           Chat.all.collect { |c| ["Chat #{c.id} (Between #{c.sender.email} and #{c.receiver.email})", c.id] },
           { include_blank: true },
           class: 'form-select' %>
