--- a/Whats_New/app/views/users/_form.html.erb
+++ b/Whats_New/app/views/users/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: user, local: true, html: { class: 'needs-validation', novalidate: true }) do |form| %>
-  <% if user.errors.any? %>
+<%= form_with(model: @user) do |f| %>
+  <% if @user.errors.any? %>
     <div class="alert alert-danger">
-      <h4><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h4>
+      <h4><%= pluralize(@user.errors.count, "error") %>:</h4>
       <ul>
-        <% user.errors.each do |error| %>
+        <% @user.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
@@ -11,21 +11,16 @@
   <% end %>
 
   <div class="mb-3">
-    <%= form.label :email, class: 'form-label' %>
-    <%= form.email_field :email, class: 'form-control', required: true %>
+    <%= f.label :first_name, "First Name", class: 'form-label' %>
+    <%= f.text_field :first_name, class: 'form-control', required: true %>
   </div>
 
   <div class="mb-3">
-    <%= form.label :first_name, "First Name", class: 'form-label' %>
-    <%= form.text_field :first_name, class: 'form-control', required: true %>
-  </div>
-
-  <div class="mb-3">
-    <%= form.label :last_name, "Last Name", class: 'form-label' %>
-    <%= form.text_field :last_name, class: 'form-control', required: true %>
+    <%= f.label :last_name, "Last Name", class: 'form-label' %>
+    <%= f.text_field :last_name, class: 'form-control', required: true %>
   </div>
 
   <div class="actions">
-    <%= form.submit user.persisted? ? 'Update User' : 'Create User', class: 'btn btn-primary' %>
+    <%= f.submit 'Save', class: 'btn btn-primary' %>
   </div>
 <% end %>
