--- a/Whats_New/app/views/users/show.html.erb
+++ b/Whats_New/app/views/users/show.html.erb
@@ -1,29 +1,16 @@
-<h1>User Details</h1>
-
-<p><strong>Email:</strong> <%= @user.email %></p>
-<p><strong>Name:</strong> <%= @user.first_name %> <%= @user.last_name %></p>
-
-<h2 class="mt-4">Chats</h2>
-<ul>
-  <% @user.sent_chats.each do |chat| %>
-    <li>Chat with <%= chat.receiver.email %> (<%= link_to 'View', chat %>)</li>
-  <% end %>
-  <% @user.received_chats.each do |chat| %>
-    <li>Chat with <%= chat.sender.email %> (<%= link_to 'View', chat %>)</li>
-  <% end %>
-</ul>
-
-<h2 class="mt-4">Messages Sent</h2>
-<ul>
-  <% @user.sent_messages.each do |message| %>
-    <li><%= message.body %> (in chat <%= link_to message.chat.id, message.chat %>)</li>
-  <% end %>
-</ul>
-
-<% if can? :edit, @user %>
-  <%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary' %>
-<% end %>
-<% if can? :destroy, @user %>
-  <%= link_to 'Delete', @user, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
-<% end %>
-<%= link_to 'Back', users_path, class: 'btn btn-secondary' %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="card mt-4">
+        <div class="card-body">
+          <h2 class="card-title"><%= @user.full_name %></h2>
+          <p><strong>Email:</strong> <%= @user.email %></p>
+          
+          <% if can? :edit, @user %>
+            <%= link_to 'Edit Profile', edit_user_path(@user), class: 'btn btn-warning' %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
