--- a/Whats_New/app/views/chats/index.html.erb
+++ b/Whats_New/app/views/chats/index.html.erb
@@ -1,6 +1,8 @@
 <div class="d-flex justify-content-between align-items-center mb-3">
   <h1>Chats</h1>
-  <%= link_to 'New Chat', new_chat_path, class: 'btn btn-success' %>
+  <% if can? :create, Chat %>
+    <%= link_to 'New Chat', new_chat_path, class: 'btn btn-success' %>
+  <% end %>
 </div>
 <table class="table">
   <thead>
@@ -17,7 +19,15 @@
         <td><%= chat.sender_id %></td>
         <td><%= chat.receiver_id %></td>
         <td><%= chat.created_at %></td>
-        <td><%= link_to 'Show', chat_path(chat) %></td>
+        <td>
+          <%= link_to 'Show', chat_path(chat), class: 'btn btn-sm btn-info' %>
+          <% if can? :edit, chat %>
+            <%= link_to 'Edit', edit_chat_path(chat), class: 'btn btn-sm btn-warning' %>
+          <% end %>
+          <% if can? :destroy, chat %>
+            <%= link_to 'Delete', chat_path(chat), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
