--- a/Whats_New/app/views/chats/show.html.erb
+++ b/Whats_New/app/views/chats/show.html.erb
@@ -23,5 +23,10 @@
   </tbody>
 </table>
 
-<%= link_to 'Edit', edit_chat_path(@chat), class: 'btn btn-primary' %>
+<% if can? :edit, @chat %>
+  <%= link_to 'Edit', edit_chat_path(@chat), class: 'btn btn-primary' %>
+<% end %>
+<% if can? :destroy, @chat %>
+  <%= link_to 'Delete', chat_path(@chat), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+<% end %>
 <%= link_to 'Back', chats_path, class: 'btn btn-secondary' %>
