--- a/Whats_New/app/views/messages/index.html.erb
+++ b/Whats_New/app/views/messages/index.html.erb
@@ -1,6 +1,8 @@
 <div class="d-flex justify-content-between align-items-center mb-3">
   <h1>Messages</h1>
-  <%= link_to 'New Message', new_message_path, class: 'btn btn-success' %>
+  <% if can? :create, Message %>
+    <%= link_to 'New Message', new_message_path, class: 'btn btn-success' %>
+  <% end %>
 </div>
 <table class="table">
   <thead>
@@ -19,7 +21,15 @@
         <td><%= message.user_id %></td>
         <td><%= message.body %></td>
         <td><%= message.created_at %></td>
-        <td><%= link_to 'Show', message_path(message) %></td>
+        <td>
+          <%= link_to 'Show', message_path(message), class: 'btn btn-sm btn-info' %>
+          <% if can? :edit, message %>
+            <%= link_to 'Edit', edit_message_path(message), class: 'btn btn-sm btn-warning' %>
+          <% end %>
+          <% if can? :destroy, message %>
+            <%= link_to 'Delete', message_path(message), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
