--- a/Whats_New/app/views/users/show.html.erb
+++ b/Whats_New/app/views/users/show.html.erb
@@ -20,5 +20,7 @@
   <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary' %>
+<% if can? :edit, @user %>
+  <%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary' %>
+<% end %>
 <%= link_to 'Back', users_path, class: 'btn btn-secondary' %>
