--- a/Whats_New/app/views/messages/index.html.erb
+++ b/Whats_New/app/views/messages/index.html.erb
@@ -27,7 +27,15 @@
             <%= link_to 'Edit', edit_message_path(message), class: 'btn btn-sm btn-warning' %>
           <% end %>
           <% if can? :destroy, message %>
-            <%= link_to 'Delete', message_path(message), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+            <%= button_to 'Delete', message_path(message), 
+              method: :delete, 
+              form: { 
+                class: 'd-inline',
+                data: { 
+                  turbo_confirm: 'Are you sure you want to delete this message?' 
+                } 
+              },
+              class: 'btn btn-sm btn-danger' %>
           <% end %>
         </td>
       </tr>
