--- a/Whats_New/app/views/chats/show.html.erb
+++ b/Whats_New/app/views/chats/show.html.erb
@@ -23,10 +23,22 @@
   </tbody>
 </table>
 
-<% if can? :edit, @chat %>
-  <%= link_to 'Edit', edit_chat_path(@chat), class: 'btn btn-primary' %>
-<% end %>
-<% if can? :destroy, @chat %>
-  <%= link_to 'Delete', chat_path(@chat), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
-<% end %>
-<%= link_to 'Back', chats_path, class: 'btn btn-secondary' %>
+<div class="mt-4">
+  <% if can? :edit, @chat %>
+    <%= link_to 'Edit', edit_chat_path(@chat), class: 'btn btn-primary' %>
+  <% end %>
+  
+  <% if can? :destroy, @chat %>
+    <%= button_to 'Delete Chat', chat_path(@chat), 
+          method: :delete,
+          form: { 
+            class: 'd-inline',
+            data: { 
+              turbo_confirm: 'Are you sure you want to delete this chat? All messages will be permanently deleted.' 
+            } 
+          },
+          class: 'btn btn-danger' %>
+  <% end %>
+  
+  <%= link_to 'Back', chats_path, class: 'btn btn-secondary' %>
+</div>
