--- a/Whats_New/app/views/messages/show.html.erb
+++ b/Whats_New/app/views/messages/show.html.erb
@@ -5,10 +5,22 @@
 <p><strong>Content:</strong> <%= @message.body %></p>
 <p><strong>Sent At:</strong> <%= @message.created_at %></p>
 
-<% if can? :edit, @message %>
-  <%= link_to 'Edit', edit_message_path(@message), class: 'btn btn-primary' %>
-<% end %>
-<% if can? :destroy, @message %>
-  <%= link_to 'Delete', message_path(@message), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
-<% end %>
-<%= link_to 'Back', messages_path, class: 'btn btn-secondary' %>
+<div class="mt-4">
+  <% if can? :edit, @message %>
+    <%= link_to 'Edit', edit_message_path(@message), class: 'btn btn-primary' %>
+  <% end %>
+  
+  <% if can? :destroy, @message %>
+    <%= button_to 'Delete Message', message_path(@message), 
+          method: :delete,
+          form: { 
+            class: 'd-inline',
+            data: { 
+              turbo_confirm: 'Are you sure you want to delete this message? This action cannot be undone.' 
+            } 
+          },
+          class: 'btn btn-danger' %>
+  <% end %>
+
+  <%= link_to 'Back', messages_path, class: 'btn btn-secondary' %>
+</div>
