--- a/Whats_New/app/views/layouts/_navigation.html.erb
+++ b/Whats_New/app/views/layouts/_navigation.html.erb
@@ -6,16 +6,22 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to 'Users', users_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Chats', chats_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Messages', messages_path, class: 'nav-link' %>
-        </li>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to 'My Inbox', chats_path, class: 'nav-link active fw-bold' %>
+          </li>
+          <% if current_user.admin? %>
+            <li class="nav-item">
+              <%= link_to 'Users', users_path, class: 'nav-link' %>
+            </li>
+          <% end %>
+          <li class="nav-item">
+            <%= link_to 'Messages', messages_path, class: 'nav-link' %>
+          </li>
+        <% end %>
       </ul>
+
+
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <% if user_signed_in? %>
           <li class="nav-item">
